--- a/src/components/player/player.module.scss
+++ b/src/components/player/player.module.scss
@@ -120,6 +120,7 @@
 .saveBtn {
 	background: transparent !important;
 	padding: 0 !important;
+	border-radius: 0 !important;
 
 	&:hover {
 		background: transparent !important;
