--- a/src/components/reviews/review.module.scss
+++ b/src/components/reviews/review.module.scss
@@ -198,7 +198,7 @@
 
 .link {
 	display: flex;
-	margin: 0 auto;
+	margin: 30px auto 0;
 	width: fit-content;
 	padding: 16px 24px;
 	border-radius: 14px;
