--- a/src/components/player/player.module.scss
+++ b/src/components/player/player.module.scss
@@ -5,6 +5,7 @@
 	height: fit-content;
 	border-radius: 20px;
 	max-width: 660px;
+	width: 100%;
 
 	@media (max-width: 1100px) {
 		max-width: 560px;
@@ -23,6 +24,7 @@
 	border-radius: 20px;
 	border: none;
 	max-width: 620px;
+	width: 100%;
 
 	@media (max-width: 1100px) {
 		max-width: 520px;
